<resources>
    <string name="app_name">LKACMF</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="in_project">进入程序</string>
    <string name="scan_fail">扫描失败</string>
    <string name="scan_finish">扫描结束</string>
    <string name="scan_again">未扫描到设备蓝牙，是否重新扫描</string>
    <string name="connect_again">蓝牙连接失败，是否重新连接</string>
    <string name="connect_success">已连接</string>
    <string name="connect_disconnected">连接断开</string>
    <string name="connect_services_failed">服务发现失败</string>
    <string name="connect_unknown_status">未知的连接状态</string>
    <string name="connect_services_discovered">设备服务发现完成</string>
    <string name="connect_timeout">连接超时</string>
    <string name="connect_gatt_error">GATT状态码异常</string>
    <string name="characteristic_notify_enable_failed">特征通知打开失败</string>
    <string name="characteristic_notify_enable_succeed">通知打开成功</string>
    <string name="characteristic_write_failed">特征数据写入失败</string>
    <string name="characteristic_write_success">特征数据写入成功</string>
    <string name="connect_ble">请先连接蓝牙</string>
    <string name="phone_title">未检测到IC卡，请更换其他设备拨打 0537-2638599</string>
    <string name="ble_not_supported">本设备不支持蓝牙</string>
    <string name="ble_open_fail">蓝牙打开失败，请手动开启后重启程序</string>
    <string name="ble_activate_code">请输入激活码</string>
    <string name="ble_activate_except">获取设备编码异常</string>
    <string name="ble_activate_error">设备异常，请联系管理员</string>
    <string name="please_write_ture_activatecode">请输入正确激活码</string>
    <string name="dont_have_finish_date">请输入正确激活码</string>
    <string name="ble_activate_title">请复制上部设备码发送到鲁科管理员获取激活码，将激活码复制到下部输入框点击确定即可。</string>
    <string name="empower_success">授权成功</string>
    <string name="empower_faile">授权失败</string>

    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="punctation">标点</string>
    <string name="direction">路径</string>
    <string name="thinkness">图层</string>
    <string name="select">探头</string>
    <string name="material">材料</string>
    <string name="screenshot">截图</string>
    <string name="suspend">暂停</string>
    <string name="refresh">刷新</string>
    <string name="detection_mode">检测模式</string>
    <string name="calibration">标定</string>
    <string name="measure">测量</string>
    <string name="forms">报表</string>
    <string name="save">保存</string>
    <string name="play_back">回放</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="array">探头</string>
    <string name="roll">滚动波形</string>
    <string name="no_roll">取消滚动</string>
    <string name="rate">探头频率</string>
    <string name="encoder_user">编码器</string>
    <string name="rate1">1K</string>
    <string name="rate5">5K</string>
    <string name="rate10">10K</string>
    <string name="user">使用</string>
    <string name="no_user">不适用</string>
    <string name="setting">设置</string>
    <string name="image_list">图片列表</string>
    <string name="no_data">暂无数据</string>
    <string name="no_permission">权限未获取</string>
    <string name="remove_sure">您确定要删除此项数据吗？</string>


    <string name="request_faile">请求失败</string>
    <string name="version_check">版本检测</string>
    <string name="current_version">当前版本</string>
    <string name="file_list">文件列表</string>
    <string name="contact_comp">联系我们</string>
    <string name="exit_project">退出程序</string>
    <string name="last_version">已是最新版本</string>
    <string name="no_devices">未获取到设备</string>
    <string name="version_checking">版本检测中...</string>

    <string name="handler_data">数据请求中</string>
    <string name="version_data_error">版本信息请求失败</string>
    <string name="have_new_version">发现新版本</string>
    <string name="net_error">网络异常</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="connect_state">连接状态</string>
    <string name="user_info">说明书</string>
    <string name="main">主页</string>
    <string name="analysts">数据分析</string>
    <string name="auto">默认</string>
    <string name="T">T字扫描</string>
    <string name="L">焊缝L扫描</string>
    <string name="R">焊缝R扫描</string>
    <string name="C">焊缝扫描</string>
    <string name="Z">Z字扫描</string>
    <string name="write_thinkness">请输入图层厚度</string>
    <string name="pen_probe">笔式</string>
    <string name="standard_probe">标准</string>
    <string name="three_probe">三阵列</string>
    <string name="five_probe">五阵列</string>
    <string name="seven_probe">7阵列</string>

    <string name="material_plate">板材</string>
    <string name="material_seam">焊缝</string>
    <string name="material_corner">拐角</string>
    <string name="back_play">回放</string>
    <string name="reset">复位</string>
    <string name="report">报告</string>
    <string name="screen">框选</string>
</resources>