<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/rate"
                    android:textSize="16dp" />

            <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_tab_bg"
                    app:tabIndicator="@drawable/shape_full_tab_indicator"
                    app:tabIndicatorColor="@color/theme_back_color"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="45dp"
                    app:tabMinWidth="196dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/red"
                    app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/start" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stop" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/refresh" />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/array"
                    android:textSize="16dp" />
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/theme_color"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="30dp">
        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnSettingCancel"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_cancel"
                android:layout_marginRight="20dp"/>
        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnSettingSure"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_sure" />
    </LinearLayout>


</LinearLayout>