<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_touch_user"
        tools:context=".activity.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="1dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_start"
                    android:text="@string/start" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_suspend"
                    android:text="@string/suspend"
                    android:visibility="gone" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_stop"
                    android:text="@string/stop" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_punctation"
                    android:text="@string/punctation" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_image"
                    android:text="@string/screenshot" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_direction"
                    android:text="@string/direction" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_thinkness"
                    android:text="@string/thinkness" />

            <Button
                    style="@style/Button"
                    android:background="@drawable/btn"
                    android:drawableTop="@drawable/ic_select"
                    android:text="@string/select" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="1dp">

            <LinearLayout
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="5dp">
                            <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/white">

                                <com.github.mikephil.charting.charts.LineChart
                                        android:id="@+id/lineChartBX"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="left"
                                        android:layout_weight="1" />
                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="XBX"
                                        android:textColor="@color/black"
                                        android:layout_gravity="right"
                                        android:layout_margin="5dp"/>
                            </FrameLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="5dp">

                        <FrameLayout
                                android:id="@+id/linBZ"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:orientation="vertical">
                            <com.github.mikephil.charting.charts.LineChart
                                    android:id="@+id/lineChartBZ"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="left"
                                    android:layout_marginBottom="2dp"
                                    android:layout_weight="1" />
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="XZX"
                                    android:textColor="@color/black"
                                    android:layout_gravity="right"
                                    android:layout_margin="5dp"/>
                        </FrameLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:layout_marginRight="2dp"
                        android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="6"
                            app:cardCornerRadius="5dp">

                        <FrameLayout
                                android:id="@+id/linDX"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:background="@color/white">
                            <com.github.mikephil.charting.charts.MyLineChart
                                    android:id="@+id/lineChart"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="left"
                                    android:layout_marginBottom="2dp"
                                    android:layout_weight="6"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="蝶形图"
                                    android:textColor="@color/black"
                                    android:layout_gravity="right"
                                    android:layout_margin="5dp"/>
                        </FrameLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            app:cardCornerRadius="5dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                            <TextView
                                    style="@style/headerText"
                                    android:layout_width="match_parent"
                                    android:layout_height="35dp"
                                    android:background="@color/blue_touch_user"
                                    android:gravity="center_vertical"
                                    android:paddingLeft="15dp"
                                    android:text="测量数据"
                                    android:textColor="@color/black" />

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="4"
                                    android:background="@color/white"
                                    android:orientation="vertical">

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginLeft="5dp"
                                        android:layout_marginTop="20dp"
                                        android:gravity="center_vertical"
                                        android:text="深度系数：1"
                                        android:textColor="@color/theme_color"
                                        android:textSize="20dp" />

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginLeft="5dp"
                                        android:gravity="center_vertical"
                                        android:text="长度：1266mm"
                                        android:textColor="@color/theme_color"
                                        android:textSize="20dp" />

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp"
                                        android:layout_marginLeft="5dp"
                                        android:gravity="center_vertical"
                                        android:text="深度：666mm"
                                        android:textColor="@color/theme_color"
                                        android:textSize="20dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>